added register demo

--- a/draft.html
+++ b/draft.html
@@ -218,6 +218,40 @@ of youth in governance—despite 85% of Zambia's population being under 35—UNZ
 
 
 <!-- =========================
+    LEGACY
+============================== -->
+<section id="overview" class="parallax-section">
+	<div class="container">
+		<div class="row">
+
+			<div class="col-md-6 col-sm-12">
+				<img src="images/overview-img.jpg" class="img-responsive" alt="Overview">
+		
+			</div>
+
+			<div class="col-md-1"></div>
+
+			<div class="wow fadeInUp col-md-4 col-sm-12" data-wow-delay="1s">
+				<div class="overview-detail">
+					<h2>ABOUT THE EVENT</h2>
+					<p></p>
+					<p>
+
+<strong>The University of Zambia Public Assembly (UNZAPA)</strong> is a student-led governance body 
+established at the University of Zambia on <strong>24th September 2024</strong>, with its inaugural session on <strong>18th May 2025</strong> and official launch on <strong>7th July 2025</strong>. Created to address the underrepresentation 
+of youth in governance—despite 85% of Zambia's population being under 35—UNZAPA functions as a 
+<strong>shadow parliament</strong>.
+					<a href="#trainer" class="btn btn-default smoothScroll">Let us begin</a>
+				</div>
+			</div>
+
+			<div class="col-md-1"></div>
+
+		</div>
+	</div>
+</section>
+
+<!-- =========================
     TRAINER SECTION   
 ============================== -->
 <section id="trainer" class="parallax-section">
