--- a/draft.html
+++ b/draft.html
@@ -76,7 +76,7 @@
 			<div class="col-md-offset-1 col-md-10 col-sm-12">
 				<h3 class="wow bounceIn" data-wow-delay="0.9s">WELCOME TO</h3>
 				<h1 class="wow fadeInUp" data-wow-delay="1.6s">UNZAPA</h1>
-				<a href="#overview" class="wow fadeInUp smoothScroll btn btn-default" data-wow-delay="2s">APPLY NOW</a>
+				<a href="register.html" class="wow fadeInUp smoothScroll btn btn-default" data-wow-delay="2s">APPLY NOW</a>
 			</div>
 
 		</div>
