--- a/register.html
+++ b/register.html
@@ -3,73 +3,87 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Participation Category</title>
+  <title>Event Participation Registration</title>
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0; padding: 0;
-      background-color: #f4f4f4;
+      background-color: #f9f9f9;
     }
+
     .container {
       max-width: 800px;
       margin: 50px auto;
       background: #fff;
       padding: 30px;
-      border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
+
     h2 {
       text-align: center;
+      margin-bottom: 20px;
     }
+
     ul {
       list-style-type: disc;
-      padding-left: 20px;
+      padding-left: 30px;
     }
+
     .register-btn {
       display: block;
       margin: 30px auto;
-      padding: 12px 30px;
+      padding: 15px 35px;
       background-color: #e91e63;
       color: white;
       border: none;
       border-radius: 5px;
       cursor: pointer;
-      font-size: 16px;
+      font-size: 18px;
     }
+
     .modal {
       display: none;
       position: fixed;
       top: 0; left: 0;
       width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7);
+      background: rgba(0, 0, 0, 0.6);
       justify-content: center;
       align-items: center;
+      z-index: 999;
     }
+
     .modal-content {
-      background: white;
-      padding: 30px;
-      border-radius: 8px;
+      background: #fff;
+      padding: 25px;
+      border-radius: 10px;
       width: 90%;
       max-width: 500px;
       position: relative;
     }
-    .modal-content input, select {
+
+    .modal-content input,
+    .modal-content select {
       width: 100%;
-      padding: 10px;
-      margin-top: 10px;
-      margin-bottom: 15px;
+      padding: 12px;
+      margin: 10px 0;
+      border: 1px solid #ccc;
+      border-radius: 5px;
     }
+
     .close {
       position: absolute;
-      top: 10px; right: 15px;
+      top: 10px; right: 20px;
       font-size: 24px;
       cursor: pointer;
     }
+
     .submit-btn {
       background-color: #4caf50;
       color: white;
       border: none;
-      padding: 12px;
+      padding: 14px;
+      font-size: 16px;
       border-radius: 5px;
       width: 100%;
       cursor: pointer;
@@ -98,20 +112,29 @@
 <div class="modal" id="registerModal">
   <div class="modal-content">
     <span class="close" id="closeModal">&times;</span>
-    <h3>Register for Participation</h3>
-    <form id="registrationForm">
-      <input type="text" placeholder="First Name" name="firstName" required />
-      <input type="text" placeholder="Last Name" name="lastName" required />
-      <input type="tel" placeholder="Phone Number" name="phone" required />
-      <input type="email" placeholder="Email" name="email" required />
-      <select name="gender" required>
+    <h3>Register Now</h3>
+
+    <!-- Replace action below with your actual Formspree URL -->
+    <form id="registrationForm"
+      action="https://formspree.io/f/xeorobnn"
+      method="POST"
+      enctype="multipart/form-data">
+
+      <input type="text" name="First Name" placeholder="First Name" required />
+      <input type="text" name="Last Name" placeholder="Last Name" required />
+      <input type="tel" name="Phone Number" placeholder="Phone Number" required />
+      <input type="email" name="Email" placeholder="Email Address" required />
+      
+      <select name="Gender" required>
         <option value="">Select Gender</option>
-        <option value="male">Male</option>
-        <option value="female">Female</option>
-        <option value="other">Other</option>
+        <option>Male</option>
+        <option>Female</option>
+        <option>Other</option>
       </select>
-      <input type="file" name="photo" accept="image/*" required />
-      <button type="submit" class="submit-btn">Pay with Airtel Money</button>
+
+      <!-- <input type="file" name="Professional Photo" accept="image/*" required /> -->
+
+      <button type="submit" class="submit-btn">Submit & Pay via Airtel Money</button>
     </form>
   </div>
 </div>
@@ -123,45 +146,22 @@
 
   openBtn.onclick = () => modal.style.display = 'flex';
   closeBtn.onclick = () => modal.style.display = 'none';
-  window.onclick = e => { if (e.target === modal) modal.style.display = 'none'; }
 
-  document.getElementById('registrationForm').addEventListener('submit', async function(e) {
-    e.preventDefault();
+  window.onclick = e => {
+    if (e.target === modal) modal.style.display = 'none';
+  }
 
-    const formData = new FormData(this);
-    const data = {
-      firstName: formData.get('firstName'),
-      lastName: formData.get('lastName'),
-      phone: formData.get('phone'),
-      email: formData.get('email'),
-      gender: formData.get('gender')
-    };
+  document.getElementById('registrationForm').addEventListener('submit', function(e) {
+    // Slight delay to allow form submission before redirecting
+    setTimeout(() => {
+      // Airtel Money USSD trigger (works only on mobile)
+      const airtelNumber = "0772150004";
+      const amount = 100; // You can make this dynamic
+      const ussd = `tel:*115*1*1*${airtelNumber}*${amount}#`;
 
-    alert("Simulating Airtel Money Payment...");
-
-    // Simulate API call to backend for Airtel Money
-    try {
-      // Replace with your server endpoint that handles Airtel Money
-      const response = await fetch('https://your-backend-endpoint.com/pay/airtelmoney', {
-        method: 'POST',
-        body: JSON.stringify(data),
-        headers: {
-          'Content-Type': 'application/json'
-        }
-      });
-
-      const result = await response.json();
-
-      if (result.success) {
-        alert("Payment initiated successfully! Confirmation sent.");
-        modal.style.display = 'none';
-      } else {
-        alert("Payment failed. Try again.");
-      }
-    } catch (error) {
-      console.error(error);
-      alert("Error initiating payment.");
-    }
+      // Try to open dialer with USSD
+      window.location.href = ussd;
+    }, 1000);
   });
 </script>
 
