--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="col-md-offset-1 col-md-10 col-sm-12">
 				<h3 class="wow bounceIn" data-wow-delay="0.9s">WELCOME TO</h3>
 				<h1 class="wow fadeInUp" data-wow-delay="1.6s">UNZAPA</h1>
-				<a href="#overview" class="wow fadeInUp smoothScroll btn btn-default" data-wow-delay="2s">APPLY NOW</a>
+				<a href="register.html" class="wow fadeInUp smoothScroll btn btn-default" data-wow-delay="2s">APPLY NOW</a>
 			</div>
 
 		</div>
@@ -216,6 +216,40 @@ of youth in governance—despite 85% of Zambia's population being under 35—UNZ
 	</div>
 </section>
 
+
+<!-- =========================
+    LEGACY
+============================== -->
+<section id="overview" class="parallax-section">
+	<div class="container">
+		<div class="row">
+
+			<div class="col-md-6 col-sm-12">
+				<img src="images/overview-img.jpg" class="img-responsive" alt="Overview">
+		
+			</div>
+
+			<div class="col-md-1"></div>
+
+			<div class="wow fadeInUp col-md-4 col-sm-12" data-wow-delay="1s">
+				<div class="overview-detail">
+					<h2>ABOUT THE EVENT</h2>
+					<p></p>
+					<p>
+
+<strong>The University of Zambia Public Assembly (UNZAPA)</strong> is a student-led governance body 
+established at the University of Zambia on <strong>24th September 2024</strong>, with its inaugural session on <strong>18th May 2025</strong> and official launch on <strong>7th July 2025</strong>. Created to address the underrepresentation 
+of youth in governance—despite 85% of Zambia's population being under 35—UNZAPA functions as a 
+<strong>shadow parliament</strong>.
+					<a href="#trainer" class="btn btn-default smoothScroll">Let us begin</a>
+				</div>
+			</div>
+
+			<div class="col-md-1"></div>
+
+		</div>
+	</div>
+</section>
 
 <!-- =========================
     TRAINER SECTION   
